fixed logo alignment

--- a/styles/partials/_footer.scss
+++ b/styles/partials/_footer.scss
@@ -29,7 +29,7 @@
     }
     &-right {
       align-self: center;
-      margin-top: 0.4rem;
+      margin-top: 0.8rem;
     }
   }
 
